before tex arrays